Bug 136481 - Regression in 7.0.0 & 7.0.1 - Data Validation Drop-down when using keys "ALT+DOWN Arrow", it doesn't auto highlight the first option (when cell is blank)
Summary: Regression in 7.0.0 & 7.0.1 - Data Validation Drop-down when using keys "ALT+...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.1 target:7.2.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-09-04 21:19 UTC by Getafix
Modified: 2022-01-16 21:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Regression shows in both 7.0.0 & 7.0.1, started in 7.0.0 (15.25 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-09-04 21:20 UTC, Getafix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Getafix 2020-09-04 21:19:29 UTC
Description:
Regression - Data Validation Drop-down when using keys "ALT+DOWN Arrow" then again "Down Arrow", it doesn't highlight the first option (when cell is blank), but highlights the second option

When already data is present then it Auto highlights what was already filled in earlier (which is okay)

Steps to Reproduce:
1. Data Validation Drop-down when using keys "ALT+DOWN Arrow" then again "Down Arrow"
2. it doesn't highlight the first option (when cell is blank)
3. but highlights the second option
4. When already data is present then it Auto highlights what was already filled in earlier (which is okay)

Actual Results:
Regression - Data Validation Drop-down when using keys "ALT+DOWN Arrow" then again "Down Arrow", it doesn't highlight the first option (when cell is blank), but highlights the second option

When already data is present then it Auto highlights what was already filled in earlier (which is okay)

Expected Results:
Should highlight the first option in the list (when previously cell is blank)


Reproducible: Always


User Profile Reset: No



Additional Info:
Sample Sheet attached
Comment 1 Getafix 2020-09-04 21:20:15 UTC
Created attachment 165162 [details]
Regression shows in both 7.0.0 & 7.0.1, started in 7.0.0
Comment 2 Getafix 2020-09-04 21:32:02 UTC
Regression in 7.0.0 & 7.0.1 - Data Validation Drop-down when using keys "ALT+DOWN Arrow", it doesn't highlight the first option by default (when cell is blank)


When again DOWN arrow is pressed it Highlights the second option in dropdown
Comment 3 m_a_riosv 2020-09-04 23:54:09 UTC
Repro
Version: 7.1.0.0.alpha0+ (x64)
Build ID: baa84b5b4d287da0f00fc3fbf11f464f267c9202
CPU threads: 4; OS: Windows 10.0 Build 20180; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 4 Getafix 2021-02-03 17:44:51 UTC
Bug is present in 7.1.0.3 also
Comment 5 Aron Budea 2022-01-14 01:37:12 UTC
This is reproducible in Linux when using gen VCL plugin.
Bibisected to the following commit using repo bibisect-linux-64-7.0. Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=df50b02cd3177570bb26484a03273ba5caa50037
author		Caolán McNamara <caolanm@redhat.com>	2020-05-24 20:48:03 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-05-25 20:20:44 +0200

weld ScFilterListBox
Comment 6 Caolán McNamara 2022-01-14 12:48:29 UTC
we can improve this to at least show the focus rect for the problematic case
Comment 7 Commit Notification 2022-01-14 14:46:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4bdf28b404f90236d93ce207671f755a71f28496

tdf#136481 show the focus rect for the case nothing is yet selected

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2022-01-14 15:47:33 UTC
done in trunk, backport to 7-3 and 7-2 in gerrit
Comment 9 Commit Notification 2022-01-16 21:01:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/773cc6b9ad92f28405ca204f1fa475e33f15132b

tdf#136481 show the focus rect for the case nothing is yet selected

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2022-01-16 21:02:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/2e02d78f92b06c72d515240cf83e1a8f224b0ae3

tdf#136481 show the focus rect for the case nothing is yet selected

It will be available in 7.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.