tdf#136481 show the focus rect for the case nothing is yet selected

but the cursor is at pos 0

Change-Id: I7c94480bffdced23fe89d4e3ba0e729742247130